--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mkdirp": "^0.5.1",
     "shortid": "^2.2.8",
     "vue": "^2.6.10",
-    "vue-apollo": "^3.0.0-beta.11"
+    "vue-apollo": "^3.0.0-beta.11",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
