--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,26 +13,26 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "graphql-type-json": "^0.2.1",
+    "graphql-type-json": "^0.3.2",
     "lowdb": "^1.0.0",
-    "mkdirp": "^0.5.1",
-    "shortid": "^2.2.8",
-    "vue": "^2.6.10",
-    "vue-apollo": "^3.0.0-beta.11",
+    "mkdirp": "^0.5.6",
+    "shortid": "^2.2.16",
+    "vue": "^2.7.8",
+    "vue-apollo": "^3.1.0",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-eslint": "^3.12.0",
-    "@vue/cli-service": "^3.12.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-graphql": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "graphql-tag": "^2.9.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "graphql-tag": "^2.12.6",
     "vue-cli-plugin-apollo": "^0.22.2",
     "vue-cli-plugin-windicss": "^1.1.6",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.7.8"
   },
   "eslintConfig": {
     "root": true,
